<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background_pic"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/iv_splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/splash_icon"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_icon_name"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/iv_splash_icon"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <TextView
            android:id="@+id/tv_log_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/login_google_icon"
            android:layout_centerInParent="true"
            android:background="@drawable/log_google_shape"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/log_google_text"/>
        <TextView
            android:id="@+id/tv_log_vistor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_log_google"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/log_vistor_shape"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableLeft="@mipmap/login_visitor_icon"
            android:gravity="center"
            android:textColor="@color/white"
            android:drawablePadding="10dp"
            android:text="@string/log_vistor_text"/>



    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/tv_log_vistor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_read_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_checked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:text="@string/log_under_text_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/log_under_text_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:text="@string/log_under_text_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/log_under_text_4"/>
    </LinearLayout>

</LinearLayout>